# BTN-1

./: .gitignore  README.md
.github/: release-drafter.yml
.github/workflows/: build-beta.yml  build.yml  ci.yml  weekly.yml
Integrations/: CLAUDE.md
Integrations/ESPHome/: BTN-1.yaml  BTN-1_Minimal.yaml  Core.yaml  OLED.yaml
Integrations/ESPHome/beta-channel/: BTN-1_Minimal.yaml
Integrations/ESPHome_Zigbee/: Core_Hardware_Zigbee.yaml  PAIRING_GUIDE.md
Integrations/ESPHome_Zigbee/examples/: btn1_zigbee_debug.yaml  btn1_zigbee_simple.yaml  btn1_zigbee_simple_FIXED.yaml
Integrations/Zigbee/: BTN-1.yaml  PAIRING_GUIDE.md  Readme.md  Zigbee.md  apollo_btn1.js  ota_usage.md  test_plan.md  todo.md
Integrations/Zigbee/BTN-1_IDF/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
Integrations/Zigbee/BTN-1_IDF/main/: idf_component.yml  main.c
Integrations/Zigbee/BTN-1_Zig/: CMakeLists.txt  FLASHING_INSTRUCTIONS.md  FLASH_TROUBLESHOOTING.md  PAIRING_INSTRUCTIONS.md  QUICK_FLASH_GUIDE.md  QUICK_PAIRING_GUIDE.md  README.md  flash.bat  flash.py  flash.sh  idf_component.yml  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c6-devkitc-1
Integrations/Zigbee/BTN-1_Zig/main/: CMakeLists.txt  button_handler.h  led_indicator.h  led_strip_encoder.h  ota_handler.c  simple_led.c  simple_led.h  zigbee_device.c  (+1 more)
Integrations/ZigbeeBTN/: ZigbeeBTN.ino
Integrations/Zigbee_Old/BTN-1_Zig/src/: CMakeLists.txt  button_handler.c  idf_component.yml  power_management.h
static/: index.html
static/firmware-zb/: manifest.json
(+20 files in other folders)
